exports[`test the round add button matches the snapshot 1`] = `
<button
  className="hWjmTF"
  onClick={[Function]}>
  ButtonValue
</button>
`;

exports[`test the round add button with button type given matches the snapshot 1`] = `
<button
  className="hWjmTF"
  onClick={[Function]}
  type="button">
  ButtonValue
</button>
`;
